# nonebot-plugin-function

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_function/: __init__.py
