[project]
name = "nonebot-plugin-function"
version = "0.1.8.4"
description = "奇怪的东西"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-plugin-waiter>=0.7.1",
    "nonebot-plugin-alconna>=0.50.2",
    "httpx>=0.27.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_alconna"]
plugin_dirs = ["demo/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]
